[tool.poetry]
name = "ameer hamza backend"
version = "0.1.0"
description = ""
authors = ["Rizwan Riaz <iamrizwan077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
